--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: coaching-center
+    name: msx-portal
     env: php
     build:
       buildCommand: "./build.sh"
@@ -8,16 +8,44 @@ services:
     envVars:
       - key: APP_ENV
         value: production
+      - key: APP_DEBUG
+        value: "false"
+      - key: APP_URL
+        generateValue: true
+      - key: APP_KEY
+        generateValue: true
+      - key: DB_CONNECTION
+        value: mysql
       - key: DB_HOST
         fromDatabase:
-          name: coaching-center-db
-          property:connectionString
-          envVarName: DATABASE_URL
-      - key: DB_NAME
+          name: msx-portal-db
+          property:hostname
+      - key: DB_PORT
         fromDatabase:
-          name: coaching-center-db
+          name: msx-portal-db
+          property:port
+      - key: DB_DATABASE
+        fromDatabase:
+          name: msx-portal-db
           property:database
-      - key: DB_USER
+      - key: DB_USERNAME
+        fromDatabase:
+          name: msx-portal-db
+          property:user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: msx-portal-db
+          property:password
+    envVars:
+      - key: SESSION_DRIVER
+        value: database
+      - key: QUEUE_CONNECTION
+        value: sync
+      - key: CACHE_DRIVER
+        value: file
+    healthCheckPath: /login
+    plan: free
+    numInstances: 1
         fromDatabase:
           name: coaching-center-db
           property:user
